--- a/src/main/resources/mybatis-generator/generatorConfig.properties
+++ b/src/main/resources/mybatis-generator/generatorConfig.properties
@@ -1,11 +1,11 @@
-jdbc_driverClassName=com.mysql.cj.jdbc.Driver
-jdbc_driverPath=D:/lenovo-work/maven_local_Repository/mysql/mysql-connector-java/8.0.15/mysql-connector-java-8.0.15.jar
+jdbc_driverClassName=com.mysql.jdbc.Driver
+jdbc_driverPath=C:/Users/hadoop/.m2/repository/mysql/mysql-connector-java/5.1.44/mysql-connector-java-5.1.44.jar
 jdbc_url=jdbc:mysql://148.70.219.244:3306/backendshop_qzx?useUnicode=true&characterEncoding=UTF-8
 jdbc_username=backendshop_user
 jdbc_password=TH6ub4LJHZgvnivm
-mapperProject=D:/Users/zhangyl45/IdeaProjects/management/src/main/java
-modelProject=D:/Users/zhangyl45/IdeaProjects/management/src/main/java
-mappingProject=D:/Users/zhangyl45/IdeaProjects/management/src/main/resources
+mapperProject=F:/IvenDevelop/ECommerceWorkspace/eCommerce_backend/src/main/java
+modelProject=F:/IvenDevelop/ECommerceWorkspace/eCommerce_backend/src/main/java
+mappingProject=F:/IvenDevelop/ECommerceWorkspace/eCommerce_backend/src/main/resources
 modelPackage=com.management.backend.api.mybatis.model
 mapperPackage=com.management.backend.api.mybatis.mapper
 mappingPackage=mybatis/mapping
