--- a/src/main/resources/application.bak.properties
+++ b/src/main/resources/application.bak.properties
@@ -1,11 +1,15 @@
 debug=true
 #比如 mybatis sql日志
-logging.level.org.mybatis = DEBUG
-logging.level.com.management.backend.mybatis.mapper = DEBUG
+logging.path=logs/
+logging.level.com.*=TRACE
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://148.70.219.244:3306/backendshop_qzx?useUnicode=true&amp;characterEncoding=UTF-8
 spring.datasource.username=backendshop_user
 spring.datasource.password=TH6ub4LJHZgvnivm
+
+server.port =8080
+# Application log setting
+
 mybatis.type-aliases-package=com.management.backend.mybatis.mapper
 mybatis.mapper-locations=classpath:/com/management/backend/mybatis/mapping/*.xml
