--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,3 +17,24 @@ spring:
     password: TH6ub4LJHZgvnivm
     url: jdbc:mysql://148.70.219.244:3306/backendshop_qzx?useUnicode=true&characterEncoding=UTF-8
     username: backendshop_user
+
+qzx:
+  sellerId:
+  amazonAccessID: AKIAJH2EZXNXNDOS3TJQ
+  amazonAccessSecret: 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
+
+amazon:
+  ca:
+  de:
+
+linux:
+  image:
+    filepath: /home/ubuntu/wechat_run/vue-backend-admin/static/images/
+
+windows:
+  work:
+    image:
+      filepath: D:/05Program/vue-backend-admin/static/images/
+  home:
+    image:
+      filepath: F:/IvenDevelop/AppWorkspace/shopping/vue-backend-admin/static/images/
