--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,7 @@
 				<groupId>org.mybatis.generator</groupId>
 				<artifactId>mybatis-generator-maven-plugin</artifactId>
 				<version>1.3.2</version>
-				<configuration>
+				<!--<configuration>
 					<configurationFile>src/main/resources/mybatis-generator/generatorConfig.xml</configurationFile>
 					<verbose>true</verbose>
 					<overwrite>true</overwrite>
@@ -124,7 +124,7 @@
 							<goal>generate</goal>
 						</goals>
 					</execution>
-				</executions>
+				</executions>-->
 				<dependencies>
 					<dependency>
 						<groupId>org.mybatis.generator</groupId>
