--- a/pom.xml
+++ b/pom.xml
@@ -98,16 +98,6 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.2.28</version>
 		</dependency>
-		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpclient</artifactId>
-			<version>4.5.6</version>
-		</dependency>
-		<dependency>
-			<groupId>com.alibaba</groupId>
-			<artifactId>fastjson</artifactId>
-			<version>1.2.54</version>
-		</dependency>
 
 	</dependencies>
 
@@ -117,7 +107,7 @@
 				<groupId>org.mybatis.generator</groupId>
 				<artifactId>mybatis-generator-maven-plugin</artifactId>
 				<version>1.3.2</version>
-				<!--<configuration>
+				<configuration>
 					<configurationFile>src/main/resources/mybatis-generator/generatorConfig.xml</configurationFile>
 					<verbose>true</verbose>
 					<overwrite>true</overwrite>
@@ -129,7 +119,7 @@
 							<goal>generate</goal>
 						</goals>
 					</execution>
-				</executions>-->
+				</executions>
 				<dependencies>
 					<dependency>
 						<groupId>org.mybatis.generator</groupId>
