--- a/src/main/resources/mybatis-generator/generatorConfig.properties
+++ b/src/main/resources/mybatis-generator/generatorConfig.properties
@@ -1,11 +1,18 @@
 jdbc_driverClassName=com.mysql.jdbc.Driver
-jdbc_driverPath=C:/Users/hadoop/.m2/repository/mysql/mysql-connector-java/5.1.44/mysql-connector-java-5.1.44.jar
+#jdbc_driverPath=C:/Users/hadoop/.m2/repository/mysql/mysql-connector-java/5.1.44/mysql-connector-java-5.1.44.jar
+jdbc_driverPath=D:/Develop/apache-maven-3.5.3-repository/repository/mysql/mysql-connector-java/5.1.44/mysql-connector-java-5.1.44.jar
 jdbc_url=jdbc:mysql://148.70.219.244:3306/backendshop_qzx?useUnicode=true&characterEncoding=UTF-8
 jdbc_username=backendshop_user
 jdbc_password=TH6ub4LJHZgvnivm
-mapperProject=F:/IvenDevelop/ECommerceWorkspace/eCommerce_backend/src/main/java
-modelProject=F:/IvenDevelop/ECommerceWorkspace/eCommerce_backend/src/main/java
-mappingProject=F:/IvenDevelop/ECommerceWorkspace/eCommerce_backend/src/main/resources
+# zhongtianchuang ye yuan 
+#mapperProject=F:/IvenDevelop/ECommerceWorkspace/eCommerce_backend/src/main/java
+#modelProject=F:/IvenDevelop/ECommerceWorkspace/eCommerce_backend/src/main/java
+#mappingProject=F:/IvenDevelop/ECommerceWorkspace/eCommerce_backend/src/main/resources
+# MSI
+mapperProject=D:/workspaceIDE/eCommerce_backend/src/main/java
+modelProject=D:/workspaceIDE/eCommerce_backend/src/main/java
+mappingProject=D:/workspaceIDE/eCommerce_backend/src/main/resources
+
 modelPackage=com.management.backend.api.mybatis.model
 mapperPackage=com.management.backend.api.mybatis.mapper
 mappingPackage=mybatis/mapping
